# meltano-plugins

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install.sh
.cursor/: CONVENTIONS.md  README.md  scratchpad.md
.cursor/agents/: ai-context-writer.md  architect.md  archivist.md  debug-specialist.md  implementer.md  researcher.md  task-decomposer.md  test-writer.md
.cursor/commands/: bug-pipeline.md  feature-pipeline.md  update_context.md
.cursor/rules/: development_practices.mdc
.cursor/workflows/: 2-plan-feature.md  5-plan-task-bug.md  5-plan-task-feature.md  6-archive-feature-summary.md  README.md  implement-feature.md  implement-fix.md  implement-task-feature.md  implement-task-fix.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: plugin-matrix.yml  plugin-unit-tests.yml  script-tests.yml
_archive/adc-default-env-only-credentials/: adc-default-env-only-credentials.md
_archive/dateutils-partition-timestamps/: dateutils-partition-timestamps.md
_features/: _template.md  restful-api-tap-is-sorted-stream-config.md  root-pre-commit-and-install.md  singer-sdk-docs.md  split-path-filename-task-list.md  split-path-filename.md  target-gcs-dedup-split-logic.md  target-gcs-file-chunking-by-record-count.md  target-gcs-hive-partitioning-by-field.md  target-gcs-partition-field-validation.md  target-gcs-schema-hive-partitioning.md  typing-312-standards.md
docs/: README.md
loaders/target-gcs/: .pre-commit-config.yaml  CHANGELOG.md  README.md  install.sh  meltano.yml  pyproject.toml  sample.config.json
loaders/target-gcs/gcs_target/: sinks.py  target.py
loaders/target-gcs/target_gcs/: constants.py  sinks.py  target.py
loaders/target-gcs/target_gcs/helpers/: __init__.py  json_parsing.py  partition_path.py  partition_schema.py
loaders/target-gcs/target_gcs/paths/: __init__.py  _types.py  base.py  dated.py  partitioned.py  simple.py
loaders/target-gcs/target_gcs/paths/_partitioned/: __init__.py  hive.py  string_functions.py  validators.py
loaders/target-gcs/tests/: __init__.py  test_core.py  test_dated_path.py  test_partition_key_generation.py  test_partitioned_path.py  test_paths_base.py  test_paths_dated.py  test_paths_partitioned.py  test_paths_simple.py  test_simple_path.py  test_sinks.py
loaders/target-gcs/tests/helpers/: test_partition_path.py  test_partition_schema.py
loaders/target-gcs/tests/unit/: __init__.py  test_sinks.py
loaders/target-gcs/tests/unit/helpers/: test_json_parsing.py  test_partition_schema.py
loaders/target-gcs/tests/unit/paths/: __init__.py  test_base.py  test_dated.py  test_partitioned.py  test_simple.py
loaders/target-gcs/tests/unit/paths/_partitioned/: test_string_functions.py
scripts/: list_packages.py  run_plugin_checks.sh
taps/restful-api-tap/: CHANGELOG.md  README.md  install.sh  meltano.yml  mypy.ini  pyproject.toml  restful-api-tap.sh  tox.ini
taps/restful-api-tap/docs/AI_CONTEXT/: AI_CONTEXT_PATTERNS.md  AI_CONTEXT_QUICK_REFERENCE.md  AI_CONTEXT_REPOSITORY.md  AI_CONTEXT_tap_rest_api_msdk.md
taps/restful-api-tap/restful_api_tap/: auth.py  client.py  pagination.py  streams.py  tap.py  utils.py
taps/restful-api-tap/tests/: __init__.py  test_404_end_of_stream.py  test_core.py  test_is_sorted.py  test_streams.py  test_tap.py  test_utils.py
(+338 files in other folders)
