[project]
name = "target-gcs"
version = "3.0.0"
description = "`target-gcs` is a Singer target for GCS, built with the Meltano SDK for Singer Targets."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "Apache 2.0" }
authors = [{ name = "Datateer Ops" }]
keywords = ["ELT", "GCS"]
dependencies = [
    "requests>=2.25.1",
    "singer-sdk>=0.40.0",
    "google-cloud-storage>=2.3.0",
    "google-api-python-client>=2.49.0",
    "smart-open[gcs]>=6.0.0",
    "pytest-watch>=4.2.0",
    "orjson>=3.6.8",
    "python-dateutil>=2.8.1",
]

[project.scripts]
target-gcs = "target_gcs.target:GCSTarget.cli"

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "coverage>=6.4",
    "types-requests>=2.26.1",
    "types-python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["target_gcs"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = false
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = """
uv lock --upgrade-package "$PACKAGE_NAME"
git add uv.lock
uv build
"""
